--- a/public/user_assets/css/responsive.css
+++ b/public/user_assets/css/responsive.css
@@ -220,7 +220,7 @@
     .md-margin-bottom { margin-bottom: 2%;}
     
     /* menu */
-    .nav > li { margin-right: 17px; margin-left: 17px}
+    /* .nav > li { margin-right: 17px; margin-left: 17px} */
     .menu-button-orange {right: 15px;}
     .menu-button-yellow {right: 15px;}
     
